@@ -2,7 +2,6 @@ package com.hartwig.pipeline.tertiary.amber;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
 import java.util.List;
 
 import com.hartwig.pipeline.datatypes.DataType;
@@ -30,12 +29,19 @@ public class AmberTest extends TertiaryStageTest<AmberOutput> {
     }
 
     @Override
-    protected List<String> expectedCommands() {
-        return Collections.singletonList("java -Xmx32G -cp /opt/tools/amber/3.4/amber.jar com.hartwig.hmftools.amber.AmberApplication "
-                + "-reference reference -reference_bam /data/input/reference.bam -tumor tumor -tumor_bam /data/input/tumor.bam -output_dir "
-                + "/data/output -threads $(grep -c '^processor' /proc/cpuinfo) -ref_genome "
-                + "/opt/resources/reference_genome/37/Homo_sapiens.GRCh37.GATK.illumina.fasta "
-                + "-loci /opt/resources/amber/37/GermlineHetPon.hg19.vcf.gz");
+    protected List<ApiFileOperation> expectedFurtherOperations() {
+        String basenameSnpcheck = TestInputs.REG_GENOME_37_RESOURCE_FILES.amberSnpcheck()
+                .substring(TestInputs.REG_GENOME_37_RESOURCE_FILES.amberSnpcheck().lastIndexOf("/") + 1);
+        return List.of(new AddDatatypeToFile(DataType.B_ALLELE_FREQUENCY,
+                        Folder.root(),
+                        Amber.NAMESPACE,
+                        "tumor.amber.baf.tsv",
+                        TestInputs.defaultSomaticRunMetadata().barcode()),
+                new AddDatatypeToFile(DataType.AMBER_SNPCHECK,
+                        Folder.root(),
+                        Amber.NAMESPACE,
+                        basenameSnpcheck,
+                        TestInputs.defaultSomaticRunMetadata().barcode()));
     }
 
     @Override
@@ -61,11 +67,12 @@ public class AmberTest extends TertiaryStageTest<AmberOutput> {
     }
 
     @Override
-    protected List<ApiFileOperation> expectedFurtherOperations() {
-        return List.of(new AddDatatypeToFile(DataType.B_ALLELE_FREQUENCY,
-                Folder.root(),
-                Amber.NAMESPACE,
-                "tumor.amber.baf.tsv",
-                TestInputs.defaultSomaticRunMetadata().barcode()));
+    protected List<String> expectedCommands() {
+        return List.of("java -Xmx32G -cp /opt/tools/amber/3.4/amber.jar com.hartwig.hmftools.amber.AmberApplication "
+                        + "-reference reference -reference_bam /data/input/reference.bam -tumor tumor -tumor_bam /data/input/tumor.bam -output_dir "
+                        + "/data/output -threads $(grep -c '^processor' /proc/cpuinfo) -ref_genome "
+                        + "/opt/resources/reference_genome/37/Homo_sapiens.GRCh37.GATK.illumina.fasta "
+                        + "-loci /opt/resources/amber/37/GermlineHetPon.hg19.vcf.gz",
+                "cp /opt/resources/amber/37/Amber.snpcheck.hg19.vcf /data/output");
     }
 }
